fixed gap

--- a/src/styles/blocks/catalog.scss
+++ b/src/styles/blocks/catalog.scss
@@ -4,7 +4,7 @@
 
   display: grid;
   grid-template-columns: repeat(1, 200px);
-  gap: 48px 46px;
+  gap: 46px 48px;
 
   @media (min-width: 488px) {
     grid-template-columns: repeat(2, 200px);
